w-deploy.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: w-ext-svc
spec:
  type: ExternalName
  externalName: gitops.cfgr3xj38ihj.eu-central-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: w-svc
  labels:
    app: w-label
spec:
  ports:
  - port: 80
  selector:
    app: w-label
    tier: frontend
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: w-deploy
  labels:
    app: w-label
spec:
  selector:
    matchLabels:
      app: w-label
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: w-label
        tier: frontend
    spec:
      containers:
      - image: sadhanadocker0514/wp-image:1
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: w-pvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: w-ing
spec:
  rules:
  - host: sadhana.gitops.kops.bsh-ac.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: w-svc
          servicePort: 80
